finalizações e correções de bugs

--- a/FreiRui/TODO
+++ b/FreiRui/TODO
@@ -1,1 +1,11 @@
 Plugin de cores conflita com o alinhamento em editar post no modo wysiwyg
+Middleware for youtube?
+
+
+
+
+- Arrumar imagens
+- Criar uma categoria com links (para associação)
+- Tamanho das categorias e dos ícones (maior)
+- Sites de parceiros (links)
+
