documentation(project): update site :wrench:

--- a/FreiRui/TODO
+++ b/FreiRui/TODO
@@ -9,3 +9,5 @@ Middleware for youtube?
 - Tamanho das categorias e dos ícones (maior)
 - Sites de parceiros (links)
 
+categoria de texto único dá bug quando está vazia
+
